--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
       render();
       if (checkWin()) {
         document.getElementById('status').innerText = `O jogador ${currentPlayer} ganhou!`;
-        document.getElementById('status').style.color = 'white';
+        document.getElementById('status').style.color = 'green';
         return;
       }
       if (checkDraw()) {
