--- a/index.html
+++ b/index.html
@@ -199,11 +199,11 @@
 </head>
 <body>
   <h1>Welcome to Snake Game</h1>
-  <input type="text" id="playerNameInput" placeholder="Digite seu nome">
-  <button onclick="startGame()">Iniciar</button>
+  <input type="text" id="playerNameInput" placeholder="Enter your name">
+  <button onclick="startGame()">Start Game</button>
   <canvas id="gameCanvas" width="400" height="400" style="display: none;"></canvas>
   <div id="highScores">
-    <h2>Melhores Pontuadores</h2>
+    <h2>High Scores</h2>
     <ul id="highScoresList">
     </ul>
   </div>
@@ -234,13 +234,14 @@
       let food = {x: 15, y: 15};
       let score = 0;
 
-      const highScores = JSON.parse(localStorage.getItem('highScores')) || [];
+      let highScores = JSON.parse(localStorage.getItem('highScores')) || [];
 
       document.addEventListener('keydown', changeDirection);
 
       function main() {
         if (gameOver()) {
           saveHighScore(playerName, score);
+          highScores = JSON.parse(localStorage.getItem('highScores')) || [];
           updateHighScores();
           alert('Game Over!');
           resetGame();
