--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
   </style>
 </head>
 <body>
-  <h1>Welcome to Snake Game</h1>
-  <input type="text" id="playerNameInput" placeholder="Enter your name">
-  <button onclick="startGame()">Start Game</button>
+  <h1>Jogo da Shirley</h1>
+  <input type="text" id="playerNameInput" placeholder="Digite seu Nome">
+  <button onclick="startGame()">Iniciar</button>
   <canvas id="gameCanvas" width="400" height="400" style="display: none;"></canvas>
   <div id="highScores">
     <h2>High Scores</h2>
