--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     function startGame() {
       playerName = document.getElementById('playerNameInput').value;
       if (!playerName) {
-        alert('Please enter your name to start the game!');
+        alert('Coloque seu nome para iniciar o jogo!');
         return;
       }
 
