--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
   </style>
 </head>
 <body>
-  <h1>Jogo da Shirley</h1>
+  <h1>Passa-Tempo</h1>
   <input type="text" id="playerNameInput" placeholder="Digite seu Nome">
   <button onclick="startGame()">Iniciar</button>
   <canvas id="gameCanvas" width="400" height="400" style="display: none;"></canvas>
