--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
   <button onclick="startGame()">Iniciar</button>
   <canvas id="gameCanvas" width="400" height="400" style="display: none;"></canvas>
   <div id="highScores">
-    <h2>High Scores</h2>
+    <h2>Maiores Pontuadores</h2>
     <ul id="highScoresList">
     </ul>
   </div>
