--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/app-caixa-tag" target="_blank">Informações APP Tag Caixa</a></div>
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/portal-empresas-tagcaixa" target="_blank">Informações sobre o SPE (Portal para Empresas)</a></div>
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/planos-jv-1-1" target="_blank">Planos</a></div>
+      <div class="sub-section"><a href="https://docs.google.com/spreadsheets/d/1fBYDzlYOtvL-tA1aOJylo8m9QmdKE78zYZQfHC8FGLU/edit?usp=sharing" target="_blank">Planos CNPJ</a></div>
     </div>
     <div class="column">
       <h2>Todas Contestações em Geral</h2>
